# epitech1

epitech/: Stage tek3.txt  home.html  stage tek1
epitech/A2TeamBS/Merch/: config.enc  config.php  database_backup.sql
epitech/AIA/backup/: Makefile  ai  main.c  my_getnbr.c  my_str_to_word_array.c
epitech/AIA/n4s/: Makefile
epitech/AIA/test/: Makefile
epitech/AIA/try/: .gitignore  Makefile
epitech/CPE/: #main#
epitech/DevOps/choco/: Makefile  a.out  main.c
epitech/English/: Pitchvideogame.odt  pitch video game.odt
epitech/Eurofins/: Program.cs  ProjectCalc.sln
epitech/Eurofins/ProjectCalc/: Program.cs
epitech/MAT/101pong/: bs_101pong.py
epitech/Others/: main.c  my_getnbr.c  my_strcmp.c  my_strstr.c
epitech/Others/disp_arg/: disp_stdarg.c
epitech/Others/includes/: sum_numbers.c  sum_strings_length.c
epitech/Others/my_runner/: a.out  imagedisplay.c
epitech/Others/pointers/: a.out  pointers.c  pointers.c~  vgcore.11940  vgcore.12100  vgcore.5219
epitech/Others/task06/: my_sort_params.c
epitech/Others/temp/: Makefile  main.c  my_printf.c
epitech/Others/tesst/: a.out  main.c  my_show_word_array.c  my_show_word_array.c~  my_strdup.c  my_strdup.c~  vgcore.19131  vgcore.19486  vgcore.19562
epitech/Template/: Makefile
epitech2/Pool/backup/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MyGKrellm  SFMLDisplay.cpp  cmake_install.cmake
epitech2/Pool/backup/displays/: monitor.cpp
epitech2/Pool/backup/modules/: CPUModule.cpp  NETModule.hpp  RAMModule.cpp
fedora/: README.md  fedora-dump.sh
(+1689 files in other folders)
